Sonarqube pass because I am insane