@@ -35,7 +35,6 @@ import java.time.ZoneOffset;
 import java.time.format.DateTimeFormatter;
 import java.util.Base64;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static gov.cms.dpc.api.APITestHelpers.ORGANIZATION_ID;
 import static org.junit.jupiter.api.Assertions.*;
@@ -64,7 +63,7 @@ class TokenResourceTest extends AbstractSecureApplicationTest {
 
         List<TokenEntity> tokensToBeDeleted = tokens.getEntities().stream()
                 .filter(token -> !token.getId().equals(orgTokenId))
-                .collect(Collectors.toList());
+                .toList();
 
         tokensToBeDeleted.forEach(token -> deleteToken(token.getId()));
     }
@@ -257,7 +256,7 @@ class TokenResourceTest extends AbstractSecureApplicationTest {
         //Ensure it was crated and persisted
         CollectionResponse<TokenEntity> tokens = fetchTokens(ORGANIZATION_ID, this.fullyAuthedToken);
         assertFalse(tokens.getEntities().isEmpty(), "Should have a token");
-        List<TokenEntity> tokenList = tokens.getEntities().stream().filter(t -> t.getId().equals(token.getId())).collect(Collectors.toList());
+        List<TokenEntity> tokenList = tokens.getEntities().stream().filter(t -> t.getId().equals(token.getId())).toList();
         assertEquals(1, tokenList.size(), "There should exist exactly 1 token with matching token ID");
 
         //Delete it
@@ -272,10 +271,10 @@ class TokenResourceTest extends AbstractSecureApplicationTest {
 
         //Ensure it is no longer returned when listing tokens
         tokens = fetchTokens(ORGANIZATION_ID, this.fullyAuthedToken);
-        tokenList = tokens.getEntities().stream().filter(t -> t.getId().equals(token.getId())).collect(Collectors.toList());
+        tokenList = tokens.getEntities().stream().filter(t -> t.getId().equals(token.getId())).toList();
         assertEquals(0, tokenList.size(), "There should exist exactly 0 tokens with matching token ID");
 
-        //Ensure it is not longer returned when fetched by id
+        //Ensure it is no longer returned when fetched by id
         final HttpGet httpGet = new HttpGet(getBaseURL() + "/Token/"+token.getId());
         httpGet.addHeader(HttpHeaders.AUTHORIZATION, String.format("Bearer %s", this.fullyAuthedToken));
         try (final CloseableHttpClient client = HttpClients.createDefault();CloseableHttpResponse response = client.execute(httpGet)) {
@@ -331,8 +330,7 @@ class TokenResourceTest extends AbstractSecureApplicationTest {
             httpGet.addHeader(HttpHeaders.AUTHORIZATION, String.format("Bearer %s", token));
 
             try (CloseableHttpResponse response = client.execute(httpGet)) {
-                return this.mapper.readValue(response.getEntity().getContent(), new TypeReference<CollectionResponse<TokenEntity>>() {
-                });
+                return this.mapper.readValue(response.getEntity().getContent(), new TypeReference<>() {});
             }
         }
     }
