@@ -13,7 +13,6 @@ import org.slf4j.LoggerFactory;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @JsonTypeName("secret-filter-factory")
 public class SecretLoggingFilter implements FilterFactory<ILoggingEvent> {
@@ -30,13 +29,13 @@ public class SecretLoggingFilter implements FilterFactory<ILoggingEvent> {
 	}
 
 	public SecretLoggingFilter() {
-		Map<String, String> envVars = System.getenv();
-	}
+		// not used
+    }
 
 	@Override
 	public Filter<ILoggingEvent> build() {
 		// Clean the secrets list
-        List<String> containsSecrets = secrets.stream().filter(envVars::containsKey).collect(Collectors.toList());
+        List<String> containsSecrets = secrets.stream().filter(envVars::containsKey).toList();
 
 		return new Filter<>() {
 			@Override
