@@ -28,10 +28,11 @@ import org.slf4j.LoggerFactory;
 
 import java.io.*;
 import java.nio.charset.StandardCharsets;
-import java.sql.Date;
 import java.time.Instant;
 import java.util.*;
 import java.util.stream.Collectors;
+
+import static java.util.Date.from;
 
 /**
  * Shared methods for testing export jobs
@@ -64,7 +65,7 @@ public class ClientUtils {
                 .map(search -> (Group) search.getEntryFirstRep().getResource())
                 .map(group -> jobCompletionLambda(exportClient, httpClient, group, overrideURL))
                 .peek(jobResponse -> {
-                    if (jobResponse.getError().size() > 0) {
+                    if (!jobResponse.getError().isEmpty()) {
                         ObjectMapper mapper = new ObjectMapper();
                         try {
                             logger.error(mapper.writeValueAsString(jobResponse));
@@ -74,9 +75,7 @@ public class ClientUtils {
                         throw new IllegalStateException("Export job completed, but with errors");
                     }
                 })
-                .forEach(jobResponse -> jobResponse.getOutput().forEach(entry -> {
-                    jobResponseHandler(httpClient, entry);
-                }));
+                .forEach(jobResponse -> jobResponse.getOutput().forEach(entry -> jobResponseHandler(httpClient, entry)));
     }
 
     /**
@@ -157,7 +156,7 @@ public class ClientUtils {
         String jobLocationURL = jobLocation;
         if (jobLocation.startsWith("https://prod.dpc.cms.gov/api/v1")) {
             jobLocationURL = overrideURL.substring(0, overrideURL.indexOf("/api/v1")) + jobLocation.substring("https://prod.dpc.cms.gov".length());
-            logger.info("patched job url " + jobLocationURL);
+            logger.info("patched job url {}", jobLocationURL);
         }
         final HttpGet jobGet = new HttpGet(jobLocationURL);
         boolean done = false;
@@ -255,7 +254,7 @@ public class ClientUtils {
         System.out.println(entry.getUrl());
         try {
             final File file = fetchExportedFiles(entry.getUrl(), client);
-            System.out.println(String.format("Downloaded file to: %s", file.getPath()));
+            System.out.printf("Downloaded file to: %s%n", file.getPath());
             if(file.length() == 0){
                 throw new IllegalStateException(String.format("Downloaded file was empty. file path:  %s", file.getPath()));
             }
@@ -263,7 +262,7 @@ public class ClientUtils {
             throw new RuntimeException("Cannot output file", e);
         }
     }
-    
+
     private static JobCompletionModel jobCompletionLambda(IGenericClient exportClient, CloseableHttpClient client, Group group, String overrideURL) {
         final IOperationUntypedWithInput<Parameters> exportOperation = createExportOperation(exportClient, group.getId());
         try {
@@ -309,7 +308,7 @@ public class ClientUtils {
                 .getEntry()
                 .stream()
                 .map(Bundle.BundleEntryComponent::getResource)
-                .map(resource -> (Patient) resource)
+                .map(Patient.class::cast)
                 .forEach(patient -> patientReferences.put(patient.getIdentifierFirstRep().getValue(), new Reference(patient.getId())));
         } catch (BaseServerResponseException e) {
             handleBaseServerException(e, "patient");
@@ -332,8 +331,8 @@ public class ClientUtils {
         List<String> returnedIdentifiers = providerBundle.getEntry().stream().map(provider -> {
             Practitioner practitioner = (Practitioner) provider.getResource();
             return practitioner.getIdentifierFirstRep().getValue();
-        }).collect(Collectors.toList());
-        logger.info("Practitioners submitted and returned: {}", returnedIdentifiers.toString());
+        }).toList();
+        logger.info("Practitioners submitted and returned: {}", returnedIdentifiers);
 
         return providerBundle;
     }
@@ -348,7 +347,7 @@ public class ClientUtils {
 
     private static Provenance createAttestation(UUID organizationID, String practitioner) {
         final Provenance provenance = new Provenance();
-        provenance.setRecorded(Date.from(Instant.now()));
+        provenance.setRecorded(from(Instant.now()));
 
         provenance.addReason().setSystem("http://hl7.org/fhir/v3/ActReason").setCode("TREAT");
 
