@@ -32,7 +32,6 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 public class SmokeTest extends AbstractJavaSamplerClient {
 
@@ -155,9 +154,9 @@ public class SmokeTest extends AbstractJavaSamplerClient {
                     .getEntry()
                     .stream()
                     .map(Bundle.BundleEntryComponent::getResource)
-                    .map(resource -> (Practitioner) resource)
+                    .map(Practitioner.class::cast)
                     .map(FHIRExtractors::getProviderNPI)
-                    .collect(Collectors.toList());
+                    .toList();
 
             ClientUtils.handleExportJob(exportClient, providerNPIs, httpClient, apiHost);
             exportSample.setSuccessful(true);
